# tg_food

./: .gitignore  Makefile  README.md  bot.py  command.txt  db_setup.py  product_worker.py  pyproject.toml  scrabber.py  users_crud.py
.github/workflows/: flake8.yml  run_tests.yml
tests/: test_product_worker.py  test_scrabber.py
tests/fixtures/: calc_prod_list.json  filtered_products_list.json  first_page.html  first_page.json  products_list.json  second_page.html  second_page.json
tests/tests_db/: conftest.py  test_users.py
tg_app/: data_loader.py  product_worker.py  products.json  scrabber.py
tg_app/database/: create_db.py
tg_app/database/models/: crud.py  maindb.py  products.py  users.py
tg_app/tg_bot/: bot.py  bot_config.py
tg_app/tg_bot/handlers/: __init__.py  auth.py  common.py  downloader.py  product.py
